--- a/hei.html
+++ b/hei.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hei Verden</h1>
+    <h2>Dette er en enkel nettside</h2>
+    <p>Velkommen til min første nettside!</p>
 </body>
 </html>
