--- a/hei.html
+++ b/hei.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hei Verden</h1>
-    <h2>Dette er en enkel nettside</h2>
-    <p>Velkommen til min første nettside!</p>
+    <h1>Marcus</h1>
+    
 </body>
 </html>
